--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "math": "ts-node src/math.ts",
+    "dev": "ts-node src/index.ts",
     "test": "jest"
   },
   "devDependencies": {
